--- a/style.css
+++ b/style.css
@@ -22,12 +22,118 @@ a {
     color: var(--accent);
     text-decoration: none;
     transition: color 1s, opacity 0.5s;
+    cursor: pointer;
 }
 a:hover {
     opacity: 50%;
 }
 a.noHover:hover {
     opacity: 100%;
+}
+
+nav {
+    position: absolute;
+    inset: 0 0 95vh;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 25px;
+}
+nav > a {
+    position: relative;
+    margin: 0 25px;
+    display: inline-block;
+    height: 25px;
+    width: fit-content;
+    background-color: red;
+}
+nav > a:before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: -25px;
+    border-bottom: 25px solid red;
+    border-left: 25px solid transparent;
+}
+nav > a:after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    right: -25px;
+    border-top: 25px solid red;
+    border-right: 25px solid transparent;
+}
+
+.background {
+    width: calc(100vw - 50px);
+    height: calc(100vh - 50px);
+    position: absolute;
+    margin: 25px;
+    padding: 25px;
+    box-sizing: border-box;
+    background: linear-gradient(135deg, rgb(255,0,0) 0%, rgb(255, 68, 35) 10%, rgb(33,33,33) 10%, rgb(33,33,33) 90%, rgb(255, 68, 35) 90%, rgb(255,0,0) 100%);
+    border-radius: 25px;
+}
+
+.card {
+    width: calc(100% - 50px);
+    height: calc(100% - 50px);
+    position: absolute;
+    padding: 5%;
+    box-sizing: border-box;
+    background: #212121;
+    border-radius: 10px;
+    display: flex;
+}
+
+.scroll-container {
+    max-width: 600px;
+}
+
+.scroller {
+    padding-block: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.scroll-container[data-animated="true"] {
+    overflow: hidden;
+    mask: linear-gradient(90deg, transparent, white 25%, white 75%, transparent);
+}
+
+.scroll-container[data-animated="true"] .scroller {
+    width: max-content;
+    flex-wrap: nowrap;
+    animation: scroll var(--animation-duration, 40s) var(--animation-direction, reverse) linear infinite;
+    filter: grayscale(1);
+    transition: 0.5s filter;
+}
+
+.scroll-container[data-animated="true"] .scroller:hover {
+    filter: grayscale(0);
+}
+
+.scroll-container[data-direction="right"] {
+    --animation-direction: reverse;
+}
+
+.scroll-container[data-direction="left"] {
+    --animation-direction: forwards;
+}
+
+.scroll-container[data-speed="fast"] {
+    --animation-duration: 20s;
+}
+
+.scroll-container[data-speed="slow"] {
+    --animation-duration: 60s;
+}
+
+@keyframes scroll {
+    to { transform: translate(calc(-50% - 0.5rem)); }
 }
 
 .title {
@@ -57,112 +163,6 @@ a.noHover:hover {
     transform: translate(0, 0);
 }
 
-
-header {
-    --expanded-height: 100vh;
-    --collapsed-height: 50px;
-
-    position: sticky;
-    top: calc((var(--expanded-height) - var(--collapsed-height)) * -1);
-    overflow: hidden;
-    z-index: 1;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-
-    height: var(--expanded-height);
-
-    background-image: url("https://media.jungfrau.ch/image/upload/ar_16:8,c_crop,fl_lossy,q_auto/c_scale,w_1654/v1555595671/fileadmin/Grindelwald_First_Sommer/Bachalpsee-Sommer-Wetterhorn-Schreckhorn-Abendstimmung.jpg");
-    background-size: cover;
-    background-position: center;
-    color: #ffffff;
-}
-.header-overlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-
-    background-color: var(--header);
-    opacity: 0;
-}
-
-nav {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    height: 300px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
-}
-
-.nav-link {
-    color: #ffffff;
-    opacity: 0;
-    white-space: nowrap;
-    flex: 1 1 0;
-    text-align: center;
-    transition: color 0.5s;
-}
-.nav-link:hover {
-    color: #888888;
-}
-
-.scroll-hint {
-    color: #ffffff;
-    position: absolute;
-    bottom: 20px;
-}
-@keyframes scrollArrow {
-    0% { transform: translate(0, -2px) }
-    50% { transform: translate(0, 2px) }
-    100% { transform: translate(0, -2px) }
-}
-.scroll-arrow {
-    animation: scrollArrow 1s infinite ease-in-out;
-    margin-left: 5px;
-}
-
-.logo {
-    height: 120px;
-    width: 120px;
-}
-.logo-divider {
-    height: 150px;
-    width: 4px;
-    min-width: 4px;
-    background: white;
-    margin: 0 20px;
-}
-
-section {
-    width: 80%;
-    height: 100vh;
-    padding: 0 10%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.divider {
-    height: 0;
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
-    border-top: 2px solid var(--text)
-}
-
 .introduction-container {
     display: flex;
     flex-direction: column;
@@ -178,40 +178,10 @@ section {
     cursor: default;
     white-space: nowrap;
 }
-.name-letter {
-    display: inline-block;
-    padding: 0;
-}
 .name-description {
     margin: 0;
     font-size: medium;
-    max-width: 400px;
-}
-
-.portrait {
-    height: 200px;
-    border-bottom: 10px solid var(--accent);
-    transition: border 1s;
-}
-
-.about-me-container {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    gap: 50px;
-    flex-wrap: wrap;
-}
-.about-me {
-    flex-basis: 400px;
-    flex-grow: 1;
-    max-width: fit-content;
-}
-.about-me-text {
-    font-size: large;
-    padding-top: 10px;
-    margin-top: 10px;
-    border-top: 2px solid var(--accent);
-    transition: border 1s;
+    max-width: 500px;
 }
 
 .links {
@@ -220,114 +190,9 @@ section {
     font-size: 2em;
 }
 
-.timeline {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    border-left: 5px solid var(--text);
-}
-.timeline-card {
-    max-width: 400px;
-    margin-left: 20px;
-    padding: 20px;
-    border: 2px solid var(--accent);
-    border-radius: 10px;
-}
-.timeline-card:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    width: 18px;
-    background: white;
-    border: 1px solid var(--text);
-}
-
-.skills-row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 120px;
-}
-
-.skills-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 40px;
-}
-
-.skills-grid {
-    display: grid;
-    gap: 40px;
-    grid-auto-rows: auto;
-    grid-template-columns: repeat(3, 80px);
-}
-
 .skills-logo {
     height: 80px;
 }
-
-.projects-divider {
-    height: 0;
-    width: 60%;
-    margin: 20px 20%;
-    border-top: 1px solid var(--text);
-}
-
-.color-selector {
-    width: 50%;
-    min-width: fit-content;
-    display: flex;
-    flex-direction: row;
-    column-gap: 20px;
-    justify-content: center;
-    align-items: start;
-    border: 2px solid var(--accent);
-    border-radius: 10px;
-    transition: border 1s;
-}
-
-.options-panel {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-    justify-content: left;
-    align-items: start;
-    margin: 20px;
-}
-
-.options-table {
-    margin: -20px;
-    border-spacing: 20px;
-}
-
-.option-row {
-    display: flex;
-    flex-direction: row;
-    column-gap: 10px;
-}
-
-.option {
-    width: 1em;
-    height: 1em;
-    border: 2px solid var(--text);
-    border-radius: 5px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.option.dark { background-color: #212121; }
-.option.light { background-color: #dadada; }
-.option.red { background-color: #ff1a1a; }
-.option.blue { background-color: #0080ff; }
-.option.green { background-color: #00bb00; }
-.option.orange { background-color: #ff5500; }
 
 .footer {
     height: 80px;
